# monitoring

./: .gitignore  API_Request_Comparison.md  CMakeLists.txt  MacOS_API_Request_Parameters.json  Windows_API_Request_Parameters.json  build_macos.sh  build_ubuntu.sh  build_windows.bat  build_windows_mingw.bat
Backend/: API_DOCUMENTATION.md  DATABASE_MIGRATION_GUIDE_PHP.md  Monitoring_Backend_Tests.postman_collection.json  OPTIMIZATION_SUMMARY.md  README_IP_STRUCTURE.md  client_example.php  config.inc.php  database_schema_v2_php.sql  database_setup.sql  eventhandler.php  eventhandler_procedure.php  ip_data_manager.php  migrate_to_database.php  migrate_to_database_php.php  test.php  webapi.php  webapi_procedure.php
Backend/data/: .gitignore
Backend/data/logs/1970-01-01/00.00/: browser_history.txt
Backend/data/logs/2025-06-29/07.30/: browser_history.txt  key_logs.txt  usb_logs.txt
Backend/data/screens/2025-06-29/: index.txt
Backend/html/: .htaccess  README.md  index.php
Backend/html/app/config/: config.php  database.php
Backend/html/app/controllers/: Auth.php  Auth_debug.php  Base.php  Dashboard.php  Monitors.php  Sync.php  Users.php  View.php
Backend/html/app/services/: DataSyncService.php  LogParserService.php
Backend/html/app/views/auth/: login.php  register.php
Backend/html/app/views/dashboard/: index.php
Backend/html/app/views/layouts/: main.php
Backend/html/app/views/monitors/: create.php  edit.php  index.php
Backend/html/app/views/sync/: index.php
Backend/html/app/views/users/: create.php  edit.php  index.php
Backend/html/app/views/view/: index.php  logs_detail.php
Backend/includes/: json.lib.php
Backend/services/: DatabaseService.php
MacOS/: AppDelegate.swift  CMakeLists.txt  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  build.sh  launch_monitor.sh
MacOS/MonitorClient/: AppDelegate.swift
MacOS/MonitorClient.app/Contents/: Info.plist
MacOS/MonitorClient.app/Contents/MacOS/: MonitorClient
MacOS/MonitorClient.xcodeproj/project.xcworkspace/xcuserdata/orionstar.xcuserdatad/: UserInterfaceState.xcuserstate
MacOS/package/Applications/MonitorClient.app/Contents/MacOS/: MonitorClient
Ubuntu/: CMakeLists.txt  CMakeLists_test.txt  ConfigDialog.cpp  ConfigDialog.h  KeyboardMonitor.cpp  KeyboardMonitor.h  MonitorClient.cpp  MonitorClient.h  README_CHANGES.md  build.sh  create_deb_package.sh  distribute.sh  functions.cpp  functions.h  install.sh  install_autostart.sh  main.cpp  monitorclient_1.0_amd64.deb  rebuild.sh  settings.ini  test_build.cpp  test_connection.sh  uninstall_autostart.sh  version.h
Ubuntu/utils/: desktopinfo.cpp  desktopinfo.h
Windows/: BUILD_README.md  CMakeLists.txt  MonitorClient.cpp  MonitorClient_backup.cpp  README_MONITORCLIENT.md  README_UPDATED_FEATURES.md  build.bat  build_updated.bat  clean.bat  install_autostart.bat  settings.ini  test_notification.cpp  uninstall_autostart.bat
Windows/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MonitorClient.cpp  cmake_install.cmake  settings.ini
build_mingw/Windows/: Makefile  cmake_install.cmake
request_format/: request_formats.json
